<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/relative_layout_container_item_data_student_recycler_view_activity_main"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    >

    <ImageView
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:id="@+id/image_view_icon_student_item_data_student_recycler_view_activity_main"
        android:src="@drawable/ic_account_circle_pink_24dp"
        android:contentDescription="@string/icon_data_student_recycler_view_activity_main"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"
        android:layout_marginRight="12dp"
        android:layout_marginEnd="12dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_view_student_name_item_data_student_recycler_view_activity_main"
        android:text="@string/placeholder_text"
        android:layout_toRightOf="@+id/image_view_icon_student_item_data_student_recycler_view_activity_main"
        android:layout_toEndOf="@+id/image_view_icon_student_item_data_student_recycler_view_activity_main"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:textSize="18sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_view_student_nim_item_data_student_recycler_view_activity_main"
        android:text="@string/placeholder_text"
        android:layout_toRightOf="@+id/image_view_icon_student_item_data_student_recycler_view_activity_main"
        android:layout_toEndOf="@+id/image_view_icon_student_item_data_student_recycler_view_activity_main"
        android:layout_below="@+id/text_view_student_name_item_data_student_recycler_view_activity_main"
        android:textColor="@android:color/darker_gray"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_view_student_phone_number_item_data_student_recycler_view_activity_main"
        android:layout_toRightOf="@+id/image_view_icon_student_item_data_student_recycler_view_activity_main"
        android:layout_toEndOf="@+id/image_view_icon_student_item_data_student_recycler_view_activity_main"
        android:layout_below="@+id/text_view_student_nim_item_data_student_recycler_view_activity_main"
        android:text="@string/placeholder_text"
        android:textColor="@android:color/darker_gray"
        android:textStyle="italic"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_delete_item_data_student_recycler_view_activity_main"
        android:layout_below="@+id/image_view_icon_student_item_data_student_recycler_view_activity_main"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:background="@drawable/background_button_corner_transparent_grey"
        android:text="@string/button_delete"
        android:textAllCaps="false"
        android:textColor="#F44336"
        android:paddingTop="10dp"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="10dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_edit_item_data_student_recycler_view_activity_main"
        android:layout_below="@+id/image_view_icon_student_item_data_student_recycler_view_activity_main"
        android:layout_toLeftOf="@+id/button_delete_item_data_student_recycler_view_activity_main"
        android:layout_toStartOf="@+id/button_delete_item_data_student_recycler_view_activity_main"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:background="@drawable/background_button_corner_transparent_grey"
        android:text="@string/button_edit"
        android:textAllCaps="false"
        android:textColor="#4CAF50"
        android:paddingTop="10dp"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="10dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        />

</RelativeLayout>